--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pm-portfolio",
-  "homepage": "https://VikramKad.github.io/Personal_Site",
+  "homepage": "https://VikramKad.github.io/VikramKad.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
